Shift how we should what still needs adding

--- a/templates/site.html
+++ b/templates/site.html
@@ -92,6 +92,13 @@
 
 
 	<div class="entry-content">
+    <h2>We still intend to add:</h2>
+    <ul>
+      <li>Who owns this site?</li>
+      <li>How much does it cost to load the site based on local data costs?</li>
+      <li>A graph of reading age over time</li>
+      <li>Where this site appears in the league tables</li>
+    </ul>
 		<h2>Top stats</h2>
 		<h3>Accessibility</h3>
 		<p>Current score: {{current_accessibility}} / Average score: {{average_accessibility}}</p>
@@ -107,14 +114,6 @@
 	<p><img src="{{timelapse_filename}}" alt="Timelapse" /></p>
 	<p><img src="{{graph_filename}}_accessibility.png" alt="Accessibility score over time" /></p>
 	<p><img src="{{graph_filename}}_performance.png" alt="performance score over time" /></p>
-    <p>In here we put:</p>
-    <ul>
-      <li>Who owns this site?</li>
-      <li>An animated gif of the site over time</li>
-      <li>a graph of performance over time</li>
-      <li>a graph of accessibility over time</li>
-      <li>a graph of reading age over time</li>
-    </ul>
 	</div>
 
 </article>
