Round the numbers to two decimal places

--- a/templates/index.html
+++ b/templates/index.html
@@ -106,8 +106,8 @@ html:not( .jetpack-lazy-images-js-enabled ):not( .js ) .jetpack-lazy-image {
 								{% for site in considerations[consideration] %}
 								<tr>
 									<td><a title="{{site}}" href="{{sites[site]}}">{{site|truncate(60, True)}}</a></td>
-									<td>{{considerations[consideration][site]}}</td>
-									<td>{{avg_scores[consideration][site]}}</td>
+									<td>{{considerations[consideration][site]|round(2)}}</td>
+									<td>{{avg_scores[consideration][site]|round(2)}}</td>
 								</tr>
 								{% endfor %}
 							</tbody>
