--- a/templates/site.html
+++ b/templates/site.html
@@ -94,24 +94,25 @@
 	<div class="entry-content">
     <h2>We still intend to add:</h2>
     <ul>
-      <li>Who owns this site?</li>
+      <li>Who owns this site? Perhaps grouping sites from the same government</li>
       <li>How much does it cost to load the site based on local data costs?</li>
       <li>A graph of reading age over time</li>
       <li>Where this site appears in the league tables</li>
     </ul>
 		<h2>Top stats</h2>
 		<h3>Accessibility</h3>
-		<p>Current score: {{current_accessibility}} / Average score: {{average_accessibility}}</p>
+		<p>Current score: {{current_accessibility}} / Average score: {% if average_accessibility %}{{average_accessibility|round(2)}}{% else %}-{%endif%}</p>
 		<h3>Performance</h3>
-		<p>Current score: {{current_performance}} / Average score: {{average_performance}}</p>
+		<p>Current score: {{current_performance}} / Average score: {% if average_performance %}{{average_performance|round(2)}}{%else%}-{%endif%}</p>
 		<h3>Reading age</h3>
 		<p>{{reading_age}}</p>
 
 	<h2>What it feels like to watch it load</h2>
 	<p><img src="{{loading_gif_filename}}" alt="Site loading" width="120" height="192" style="height: auto; width: auto"/></p>
 
-	<h2>How it's done over time</h2>
+	<h2>How it's changed over time</h2>
 	<p><img src="{{timelapse_filename}}" alt="Timelapse" /></p>
+	<h2>How it's done over time</h2>
 	<p><img src="{{graph_filename}}_accessibility.png" alt="Accessibility score over time" /></p>
 	<p><img src="{{graph_filename}}_performance.png" alt="performance score over time" /></p>
 	</div>
