Improved page titles

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@ html:not( .jetpack-lazy-images-js-enabled ):not( .js ) .jetpack-lazy-image {
 			<header id="masthead" class="site-header pd-masthead bg--coal">
 				<div class="content-area">
 					<div class="site-branding pd-masthead__logo">
-						<a href="/">An experiment</a>
+						<a href="/reports/">How do government Covid19 response sites perform?</a>
 					</div><!-- .site-branding -->
 
 					<nav id="site-navigation" class="main-navigation pd-nav">
@@ -87,7 +87,7 @@ html:not( .jetpack-lazy-images-js-enabled ):not( .js ) .jetpack-lazy-image {
 
 				<article class="post-1120 page type-page status-publish has-post-thumbnail hentry">
 					<header class="entry-header">
-						<h1 class="entry-title">An experiment: Sites</h1>
+						<h1 class="entry-title">How do government Covid19 response sites perform?</h1>
 					</header>
 
 
