--- a/templates/site.html
+++ b/templates/site.html
@@ -64,7 +64,7 @@
 	<header id="masthead" class="site-header pd-masthead bg--coal">
 		<div class="content-area">
 			<div class="site-branding pd-masthead__logo">
-				<a href="/">An experiment</a>
+						<a href="/reports/">How do government Covid19 response sites perform?</a>
 			</div><!-- .site-branding -->
 
 			<nav id="site-navigation" class="main-navigation pd-nav">
@@ -87,7 +87,7 @@
 
 <article class="post-1120 page type-page status-publish has-post-thumbnail hentry">
 	<header class="entry-header">
-		<h1 class="entry-title">An experiment: {{site_name}}</h1>
+		<h1 class="entry-title">Performance of {{site_name}}</h1>
   </header>
 
 
@@ -96,7 +96,6 @@
     <ul>
       <li>Who owns this site? Perhaps grouping sites from the same government</li>
       <li>How much does it cost to load the site based on local data costs?</li>
-      <li>A graph of reading age over time</li>
       <li>Where this site appears in the league tables</li>
     </ul>
 		<h2>Top stats</h2>
