--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="profile" href="https://gmpg.org/xfn/11">
-		<title>A prototype</title>
+		<title>How do government Covid19 response sites perform?</title>
 		<script src="https://public.digital/wp-content/mu-plugins/wpcomsh/vendor/automattic/custom-fonts/js/webfont.js" type="text/javascript" async=""></script><script type="text/javascript">
 			WebFontConfig = {"typekit":{"id":"jlh7aoh"}};
 (function() {
@@ -30,32 +30,8 @@
 		<link rel="dns-prefetch" href="//public-api.wordpress.com">
 		<link rel="dns-prefetch" href="//c0.wp.com">
 
-		<style type="text/css">
-/* If html does not have either class, do not show lazy loaded images. */
-html:not( .jetpack-lazy-images-js-enabled ):not( .js ) .jetpack-lazy-image {
-	display: none;
-}
-		</style>
-		<script>
-			document.documentElement.classList.add(
-				'jetpack-lazy-images-js-enabled'
-			);
-		</script>
 		<!-- There is no amphtml version available for this URL. -->
 		<meta name="msapplication-TileImage" content="https://s0.wp.com/i/webclip.png">
-		<style type="text/css" id="wp-custom-css">
-.page-template-template-photos-php .size-full {
-	max-width: 100%;
-	height: auto;
-}
-.pd-notice {
-	background-color: #efefef;
-	text-align: left;
-	color:#000;
-}
-.pd-notice .inner {max-width:91.2rem;padding:1rem 2rem;margin:0 auto;}
-.pd-notice p {color:inherit;margin:0;}
-		</style>
 		<style type="text/css">.tk-proxima-nova{font-family:"proxima-nova-1","proxima-nova-2",sans-serif;}</style>
 		<style type="text/css">@font-face{font-family:proxima-nova-1;src:url(https://use.typekit.net/af/705e94/00000000000000003b9b3062/27/l?subset_id=2&fvd=n4&v=3) format("woff2"),url(https://use.typekit.net/af/705e94/00000000000000003b9b3062/27/d?subset_id=2&fvd=n4&v=3) format("woff"),url(https://use.typekit.net/af/705e94/00000000000000003b9b3062/27/a?subset_id=2&fvd=n4&v=3) format("opentype");font-weight:400;font-style:normal;}</style>
 	</head>
@@ -90,6 +66,10 @@ html:not( .jetpack-lazy-images-js-enabled ):not( .js ) .jetpack-lazy-image {
 						<h1 class="entry-title">How do government Covid19 response sites perform?</h1>
 					</header>
 
+<p>Good online responses are <em>fast</em> to load, removing frustration and minimising data costs for users. They are <em>accessible</em>, working on a wide range of devices and for a wide range of users' abilities. They are <em>written clearly</em>, avoiding jargon and not expecting technical understanding.</p>
+					<p>Those are the foundations. Great teams build on them with a clear focus on user needs, and strong feedback loops that let them keep making their information and services better.</p>
+					<p>We've been tracking 80-90 government Coronavirus/Covid19 response websites and analysing how well they're covering the basics. These are the interim results, intended to gather feedback.</p>
+					<p>If you want to understand the methodology, you can <a href="https://github.com/jystewart/covid19-response-screenshots">find the raw data and code on github</a>. If you want to provide feedback (and we'd really appreciate that), please <a href="mailto:james@public.digital">email James Stewart</a>.</p>
 
 					<div class="entry-content">
 						<table>
