--- a/templates/index.html
+++ b/templates/index.html
@@ -74,6 +74,7 @@
 					<div class="entry-content">
 						<table>
 							<thead>
+								<th>Government</th>
 								<th>Site</th>
 								<th>Average speed</th>
 								<th>Average accessibility</th>
@@ -82,11 +83,12 @@
 							<tbody>
 							{% for site in top_sites %}
 							<tr>
+									<td>{{sites[site]['gov_name']}}</td>
 									<td><a title="{{site}}" href="{{site}}">{{site|truncate(60, True)}}</a></td>
 									<td>{{top_sites[site]['speed']|round(2)}}</td>
 									<td>{{top_sites[site]['accessibility']|round(2)}}</td>
 									<td>Grade {{top_sites[site]['reading_age']}}</td>
-									<td><a title="Full report on {{site}}" href="{{sites[site]}}">full report</a></td>
+									<td><a title="Full report on {{site}}" href="{{sites[site]['detail']}}">full report</a></td>
 								</tr>
 								{% endfor %}
 							</tbody>
