Remove the /reports prefix from URLs

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 			<header id="masthead" class="site-header pd-masthead bg--coal">
 				<div class="content-area">
 					<div class="site-branding pd-masthead__logo">
-						<a href="/reports/">How do government Covid19 response sites perform?</a>
+						<a href="/">How do government Covid19 response sites perform?</a>
 					</div><!-- .site-branding -->
 
 					<nav id="site-navigation" class="main-navigation pd-nav">
