--- a/templates/site.html
+++ b/templates/site.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en-GB" class="no-focus-outline jetpack-lazy-images-js-enabled wf-proximanova1-n4-active wf-active">
 	<head>
 		<meta charset="UTF-8">
@@ -15,16 +16,10 @@
 	s.parentNode.insertBefore(wf, s);
 })();
 		</script>
-		<link rel="stylesheet" id="wp-block-library-css" href="https://c0.wp.com/c/5.4/wp-includes/css/dist/block-library/style.min.css" type="text/css" media="all">
-		<style id="wp-block-library-inline-css" type="text/css">
-.has-text-align-justify{text-align:justify;}
-		</style>
-		<link rel="stylesheet" id="publicdigital-style-css" href="https://public.digital/wp-content/themes/publicdigital/style.css?ver=5.4" type="text/css" media="all">
-		<link rel="stylesheet" id="publicdigital-css-css" href="https://public.digital/wp-content/themes/publicdigital/dist/css/main.css?ver=5.4" type="text/css" media="all">
-		<link rel="stylesheet" id="jetpack_css-css" href="https://c0.wp.com/p/jetpack/8.4.2/css/jetpack.css" type="text/css" media="all">
+		<link rel="dns-prefetch" href="https://use.typekit.net">
+		<link rel="stylesheet" href="/styles.pure.css" type="text/css" media="all">
 		<style type="text/css">.tk-proxima-nova{font-family:"proxima-nova-1","proxima-nova-2",sans-serif;}</style>
 		<style type="text/css">@font-face{font-family:proxima-nova-1;src:url(https://use.typekit.net/af/705e94/00000000000000003b9b3062/27/l?subset_id=2&fvd=n4&v=3) format("woff2"),url(https://use.typekit.net/af/705e94/00000000000000003b9b3062/27/d?subset_id=2&fvd=n4&v=3) format("woff"),url(https://use.typekit.net/af/705e94/00000000000000003b9b3062/27/a?subset_id=2&fvd=n4&v=3) format("opentype");font-weight:400;font-style:normal;}</style>
-		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js" integrity="sha256-R4pqcOYV8lt7snxMQO/HSbVCFRPMdrhAFMH+vr9giYI=" crossorigin="anonymous"></script>
 		<style type="text/css">
 h1 {
 	font-size: 4em;
@@ -149,8 +144,9 @@ h1 {
 				</div><!-- .content-area -->
 			</footer><!-- #colophon -->
 		</div><!-- #page -->
+		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js" integrity="sha256-R4pqcOYV8lt7snxMQO/HSbVCFRPMdrhAFMH+vr9giYI=" crossorigin="anonymous"></script>
 		<script type="text/javascript">
-
+document.addEventListener("DOMContentLoaded", function() {
 			var date_labels = [ '{{ over_time['speed'].keys()|join("','") }}' ]
 var base_options = {
 	showLines: false,
@@ -197,6 +193,7 @@ var speedChart = new Chart(cty, {
 		}]
 	},
 	options: base_options
+});
 });
 		</script>
 	</body></html>
