Remove webfont stuff as we weren't using it

--- a/templates/site.html
+++ b/templates/site.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
-<html lang="en-GB" class="no-focus-outline jetpack-lazy-images-js-enabled wf-proximanova1-n4-active wf-active">
+<html lang="en-GB" class="no-focus-outline">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="profile" href="https://gmpg.org/xfn/11">
 		<title>How do government Covid19 response sites perform?</title>
-		<script src="https://public.digital/wp-content/mu-plugins/wpcomsh/vendor/automattic/custom-fonts/js/webfont.js" type="text/javascript" async=""></script><script type="text/javascript">
-			WebFontConfig = {"typekit":{"id":"jlh7aoh"}};
-(function() {
-	var wf = document.createElement('script');
-	wf.src = 'https://public.digital/wp-content/mu-plugins/wpcomsh/vendor/automattic/custom-fonts/js/webfont.js';
-	wf.type = 'text/javascript';
-	wf.async = 'true';
-	var s = document.getElementsByTagName('script')[0];
-	s.parentNode.insertBefore(wf, s);
-})();
-		</script>
-		<link rel="dns-prefetch" href="https://use.typekit.net">
 		<link rel="stylesheet" href="/styles.pure.css" type="text/css" media="all">
-		<style type="text/css">.tk-proxima-nova{font-family:"proxima-nova-1","proxima-nova-2",sans-serif;}</style>
-		<style type="text/css">@font-face{font-family:proxima-nova-1;src:url(https://use.typekit.net/af/705e94/00000000000000003b9b3062/27/l?subset_id=2&fvd=n4&v=3) format("woff2"),url(https://use.typekit.net/af/705e94/00000000000000003b9b3062/27/d?subset_id=2&fvd=n4&v=3) format("woff"),url(https://use.typekit.net/af/705e94/00000000000000003b9b3062/27/a?subset_id=2&fvd=n4&v=3) format("opentype");font-weight:400;font-style:normal;}</style>
+	</head>
 		<style type="text/css">
 h1 {
 	font-size: 4em;
