Add missing line break in site report

--- a/templates/site.html
+++ b/templates/site.html
@@ -73,7 +73,7 @@ h1 {
 										</td>
 										<td>
 											<strong>{{current_accessibility}}</strong>
-											{% if average_accessibility %}Average: {{average_accessibility|round(2)}}{% else %}-{%endif%}
+											{% if average_accessibility %}<br />Average: {{average_accessibility|round(2)}}{% else %}-{%endif%}
 										</td>
 										<td>
 											{% set reading_age_parts = reading_age.split() %}
